# rust-db-adapter

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  sqlx-data.json
.github/workflows/: docs.yml  rust.yml
main/: crates.js  search-index.js  settings.html  source-files.js
main/db_adapter/: all.html  enum.AdapterError.html  fn.establish_connection.html  index.html  sidebar-items.js  type.PgPool.html
main/db_adapter/guild/: enum.GuildConfigError.html  enum.Privilege.html  index.html  sidebar-items.js  struct.GuildConfig.html  struct.GuildConfigBuilder.html
main/db_adapter/slap/: enum.Enforcer.html  index.html  sidebar-items.js  struct.GuildSlapRecord.html  struct.MemberSlapRecord.html  struct.SlapReport.html
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
main/implementors/core/convert/: trait.AsRef.js  trait.From.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/serde/de/: trait.Deserialize.js
main/implementors/serde/ser/: trait.Serialize.js
main/implementors/std/error/: trait.Error.js
main/src/db_adapter/: guild.rs.html  lib.rs.html  slap.rs.html
migrations/: 20210702084948_create_guilds.sql  20210716221741_create_slaps.sql
src/: guild.rs  lib.rs  slap.rs
src/tests/: framework.rs  mod.rs  test_guild.rs  test_slap.rs
tests/: framework.rs  test_guild.rs  test_slaps.rs
