[package]
name = "db-adapter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.10", features=["model"]}
dotenv = "0.15"
sqlx = {version="0.5", features=["postgres", "runtime-tokio-rustls", "macros"]}
tokio = {version="1", features=["macros"]}
thiserror = "1"