[package]
name = "db-adapter"
version = "0.2.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
net = ["serde_derive", "serde", "rocket"]

[dependencies]
serenity = {version="0.10", features=["model"]}
dotenv = "0.15"
sqlx = {version="0.5", features=["postgres", "runtime-tokio-rustls", "macros", "offline"]}
tokio = {version="1", features=["macros"]}
thiserror = "1"
async-recursion = "0.3"
tokio-stream="0.1"
serde = {version="1", optional=true}
serde_derive= {version="1", optional=true}
rocket = {version="0.5.0-rc.1", optional=true}

[dev-dependencies]
rand ="0.8"
tokio = {version="1", features=["macros", "rt-multi-thread"]}
paste = "1"
macro_rules_attribute = "0.0"